Activity Log - ensure we use the proper white space for aggregated comments

--- a/client/my-sites/activity/activity-log-item/style.scss
+++ b/client/my-sites/activity/activity-log-item/style.scss
@@ -18,6 +18,11 @@
 	.foldable-card__main {
 		white-space: pre;
 	}
+	.foldable-card__content {
+		.foldable-card__main {
+			white-space: unset;
+		}
+	}
 }
 
 .activity-log-item .foldable-card {
